@@ -13,13 +13,14 @@
             <key> <string>delegated_list</string> </key>
             <value>
               <list>
-                <string>catalog_index</string>
                 <string>title</string>
-                <string>relation_setter_id</string>
                 <string>description</string>
-                <string>portal_type</string>
                 <string>allow_jump</string>
                 <string>base_category</string>
+                <string>portal_type</string>
+                <string>catalog_index</string>
+                <string>relation_setter_id</string>
+                <string>proxy_listbox_ids</string>
               </list>
             </value>
         </item>
@@ -111,6 +112,17 @@
                         <tuple>
                           <string>Organisation</string>
                           <string>Organisation</string>
+                        </tuple>
+                      </list>
+                    </value>
+                </item>
+                <item>
+                    <key> <string>proxy_listbox_ids</string> </key>
+                    <value>
+                      <list>
+                        <tuple>
+                          <string>OrganisationModule_viewOrganisationList/listbox</string>
+                          <string>Organisations</string>
                         </tuple>
                       </list>
                     </value>
